# orderbook-server

./: Cargo.toml  LICENSE  build.rs  readme.md
src/: aggregator.rs  binance.rs  bitstamp.rs  cli.rs  client.rs  consolidate.rs  core.rs  exchange.rs  exchange_client.rs  lib.rs  main.rs  server.rs  service.rs
