[package]
name = "keyrock-eu-lsgro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.18"
simple_logger = "4.1.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
rust_decimal = "1.29.1"
futures = { version = "0.3.28" }
tokio = { version = "1.28.2", default-features = false, features = ["rt-multi-thread"] }
tokio-stream = { version = "0.1.14" }
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }