[package]
name = "orderbook-server"
version = "1.0.0"
edition = "2021"

[[bin]]
name="server"
path="src/server.rs"

[[bin]]
name="client"
path="src/client.rs"

[dependencies]
log = "0.4.18"
simple_logger = "4.1.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
rust_decimal = "1.29.1"
futures = { version = "0.3.28" }
tokio = { version = "1.28.2", default-features = false, features = ["rt-multi-thread"] }
tokio-stream = { version = "0.1.14" }
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
tonic = "0.9.2"
prost = "0.11.9"

[build-dependencies]
tonic-build = "0.9.2"